fix(web): 统一依赖与统一错误处理自测与优化